Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,16 +6,12 @@
         <div>
             <h1><a href="">Django PALACE blog</a></h1>
         </div>
-
-        <div>
-            <p>published: 23.03.2018, 15:33</p>
-            <h2><a href="">My first post</a></h2>
-            <p>SELL - PALACE Surkit Hood Grey Marl Size M Price - 220,000원</p>
-        </div>
-        <div>
-            <p>published: 23.03.2018, 15:33</p>
-            <h2><a href="">My second post</a></h2>
-            <p>SELL - PALACE JENNY T-Shirt Grey Marl Size M Price - 120,000원</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published:{{ post.published_date }}</p>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
